# session-native

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  glfw3.yml  linux_glfw3.yml
Resources/: session-native.ntrml
opengem/renderers/: CMakeLists.txt  README.md
opengem/renderers/cmake/: opengem_renderer.cmake.in
opengem/renderers/include/opengem/renderer/: renderer.h
opengem/renderers/src/: CMakeLists.txt  renderer.c
opengem/renderers/src/glfw/: glfw.c
opengem/renderers/src/sdl/: sdl.c
opengem/renderers/src/sdl2/: sdl2.c
opengem/renderers/src/truetype/: truetype.c  truetype.h
src/: CMakeLists.txt  getline.c  jsonrpc.c  jsonrpc.h  session-native.c  snode.c  snode.h
